--- a/style.scss
+++ b/style.scss
@@ -1,26 +1,15 @@
 @import url('normalize.css');
-$font-stack: 'Roboto';
-$text-color: #DF6951;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+$font-stack: 'Roboto', sans-serif;
+$text-color: #e4e4e4;
 $text-size: 18px;
-$button-color:#894233;
+$button-color:#DF6951;
 $button-text-color:#FFBBAD;
 body{
     background: url("img/background_main.dark.jpg") no-repeat fixed;
 }
-.filter__button{
-	font-family: $font-stack;
-	font-size: $text-size;
-	color: $button-text-color;
-	background-color: $text-color;
-	border: none;
-	padding: 5px 15px;
-	border-radius: 5px;
-	font-weight: bold;
-	text-transform: uppercase;
-	cursor: pointer;
-}
-.filter__button:hover,.filter__button:focus{
-	background-color: $button-color;
+.title{
+		cursor: pointer;
 }
 .container{
     font-family: $font-stack;
@@ -28,6 +17,29 @@ body{
     font-size: $text-size;
     max-width: 1440px;
     margin: 0 auto;
+}
+.filter__button,.rating__button{
+	font-family: $font-stack;
+	font-size: $text-size;
+	color: $button-text-color;
+	background-color: $button-color	;
+	border: none;
+	padding: 5px 15px;
+	border-radius: 5px;
+	font-weight: bold;
+	text-transform: uppercase;
+	cursor: pointer;
+}
+.rating-text{
+	margin: 10px 0px 20px 0px;
+}
+.rating__button{
+	padding: 10px;
+	text-transform: none;
+	margin-bottom: 10px;
+}
+.rating__btns{
+	justify-content: space-between;
 }
 .header__content{
     margin: 100px 0px;
@@ -47,62 +59,94 @@ body{
 	margin: 10px 50px 0px 0px;
 	display: flex;
 	flex-direction: column;
-}
-.header__genre span,.header__year span,.header__cense span{
-	display: flex;
-	width: 120px;
-	justify-content: space-between;
+	span{
+		display: flex;
+		width: 120px;
+		justify-content: space-between;
+	}
 }
 .title{
     text-align: center;
-}
-.rating-text{
-	margin: 10px 0px;
-    font-size: 22px;
-}
-.rating-area {
-	overflow: hidden;
-	width: 300px;
-}
-.rating-area:not(:checked) > input {
-	display: none;
-}
-.rating-area:not(:checked) > label {
-	float: right;
-	width: 30px;
-	padding: 0;
-	cursor: pointer;
-	font-size: 26px;
-	color: lightgrey;
-	text-shadow: 1px 1px #bbb;
-}
-.rating-area:not(:checked) > label:before {
-	content: '★';
-}
-.rating-area > input:checked ~ label {
-	color: gold;
-	text-shadow: 1px 1px #c60;
-}
-.rating-area:not(:checked) > label:hover,
-.rating-area:not(:checked) > label:hover ~ label {
-	color: gold;
-}
-.rating-area > input:checked + label:hover,
-.rating-area > input:checked + label:hover ~ label,
-.rating-area > input:checked ~ label:hover,
-.rating-area > input:checked ~ label:hover ~ label,
-.rating-area > label:hover ~ input:checked ~ label {
-	color: gold;
-	text-shadow: 1px 1px goldenrod;
-}
-.rate-area > label:active {
-	position: relative;
 }
 .main{
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
-.card__content img{
-	width: 200px;
-	height: 290px;
+.card{
+	margin: 30px;
+}
+.card__content{
+	.img{
+		width: 200px;
+		height: 290px;
+		transition: all .2s ease-in-out;
+		display: block;
+		&:hover{
+			transform: scale(1.1,1.1);
+			-webkit-box-shadow: 12px 12px 50px 2px rgba(223, 105, 81, 0.4);
+			-moz-box-shadow: 12px 12px 50px 2px rgba(223, 105, 81, 0.4);
+			box-shadow: 12px 12px 50px 2px rgba(223, 105, 81, 0.4);
+		}
+	}
+	.card__text-rate{
+		margin-top: 20px;
+		font-size: $text-size;
+		span{
+			color: $button-color;
+		}
+	}
+}
+.card__object{
+	.card__text-rate{
+		font-size: 20px;
+	}
+	.card__title{
+		font-size: 30px;
+	}
+	img{
+		width: 300px;
+		height: 435px;
+	}
+	&:hover{
+	transform: none;
+}
+}
+.card__full{
+	margin: 0px;
+	display: flex;
+	width: 600px;
+	.card__info{
+		margin-left: 20px;
+		.card__info-text{
+			color: $button-color;
+		}
+		.card__year{
+			margin-bottom: 20px;
+		}
+		.card__description{
+			width: 550px;
+		}
+		.card__description span{
+			color: $text-color;
+		}
+	}
+}
+.card__desc{
+	margin: 20px 0px 10px 0px;
+}
+.trailer{
+	text-align: center;
+	width: 700px;
+	margin: 40px auto;
+}
+span label{
+	cursor: pointer;
+}
+.checkselect{
+	max-height: 200px;
+	width: 150px;
+	overflow-y: scroll;
+}
+.checkselect::-webkit-scrollbar{
+	display: none;
 }
