--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,19 @@ body{
 .title{
 		cursor: pointer;
 }
+.hidden{
+	cursor: pointer;
+	visibility: hidden;
+}
+.wrapper__img img,.next,.previous{
+	margin-top: 30px;
+}
+.header__nav{
+	max-width: 1120px;
+	display: flex;
+	justify-content: space-between;
+}
+
 .container{
     font-family: $font-stack;
     color: $text-color;
@@ -31,7 +44,7 @@ body{
 	cursor: pointer;
 }
 .rating-text{
-	margin: 10px 0px 20px 0px;
+	margin: 10px 0 20px 0;
 }
 .rating__button{
 	padding: 10px;
@@ -42,7 +55,7 @@ body{
 	justify-content: space-between;
 }
 .header__content{
-    margin: 100px 0px;
+	margin: 30px 0;
 }
 .filter__content{
 	display: none;
@@ -56,7 +69,7 @@ body{
 	margin-bottom: 30px;
 }
 .header__genre,.header__year, .header__cense{
-	margin: 10px 50px 0px 0px;
+	margin: 10px 50px 0 0;
 	display: flex;
 	flex-direction: column;
 	span{
@@ -66,14 +79,42 @@ body{
 	}
 }
 .title{
-    text-align: center;
+	text-align: center;
+	margin-left: 300px;
 }
-.main{
+.main__style {
+	position: relative;
+	padding: 40px;
+	gap: 15px;
+	background-color: #1A1419;
+	border: 1px solid #1A1419;
+	border-radius: 10px;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: repeat(5,1fr);
+	&:after{
+		content: '';
+		display: block;
+		background: url(img/uzor1.svg);
+		position: absolute;
+		width: 1440px;
+		margin: 0 auto;
+		left: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		z-index: 0;
+		opacity: 0.15;
+		pointer-events: none;
+	}
+	.trailer{
+		z-index: 1;
+	}
 }
 .card{
-	margin: 30px;
+	z-index: 2;
+}
+.filter__button:hover{
+	scale: 0.9;
 }
 .card__content{
 	.img{
@@ -112,9 +153,11 @@ body{
 }
 }
 .card__full{
-	margin: 0px;
+	gap: 0;
+	width: 650px;
+	margin: 0;
 	display: flex;
-	width: 600px;
+	flex-direction: column;
 	.card__info{
 		margin-left: 20px;
 		.card__info-text{
@@ -123,21 +166,16 @@ body{
 		.card__year{
 			margin-bottom: 20px;
 		}
-		.card__description{
-			width: 550px;
-		}
 		.card__description span{
-			color: $text-color;
+			color: #e4e4e4;
 		}
 	}
 }
 .card__desc{
-	margin: 20px 0px 10px 0px;
-}
-.trailer{
-	text-align: center;
-	width: 700px;
-	margin: 40px auto;
+	margin-bottom: 10px;
+	.card__title{
+		margin: 0;
+	}
 }
 span label{
 	cursor: pointer;
