--- a/style.css
+++ b/style.css
@@ -8,6 +8,21 @@ body {
   cursor: pointer;
 }
 
+.hidden {
+  cursor: pointer;
+  visibility: hidden;
+}
+
+.wrapper__img img, .next, .previous {
+  margin-top: 30px;
+}
+
+.header__nav {
+  max-width: 1120px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .container {
   font-family: "Roboto", sans-serif;
   color: #e4e4e4;
@@ -30,7 +45,7 @@ body {
 }
 
 .rating-text {
-  margin: 10px 0px 20px 0px;
+  margin: 10px 0 20px 0;
 }
 
 .rating__button {
@@ -44,7 +59,7 @@ body {
 }
 
 .header__content {
-  margin: 100px 0px;
+  margin: 30px 0;
 }
 
 .filter__content {
@@ -62,7 +77,7 @@ body {
 }
 
 .header__genre, .header__year, .header__cense {
-  margin: 10px 50px 0px 0px;
+  margin: 10px 50px 0 0;
   display: flex;
   flex-direction: column;
 }
@@ -74,15 +89,44 @@ body {
 
 .title {
   text-align: center;
+  margin-left: 300px;
 }
 
-.main {
+.main__style {
+  position: relative;
+  padding: 40px;
+  gap: 15px;
+  background-color: #1A1419;
+  border: 1px solid #1A1419;
+  border-radius: 10px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr);
+}
+.main__style:after {
+  content: "";
+  display: block;
+  background: url(img/uzor1.svg);
+  position: absolute;
+  width: 1440px;
+  margin: 0 auto;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  opacity: 0.15;
+  pointer-events: none;
+}
+.main__style .trailer {
+  z-index: 1;
 }
 
 .card {
-  margin: 30px;
+  z-index: 2;
+}
+
+.filter__button:hover {
+  scale: 0.9;
 }
 
 .card__content .img {
@@ -120,9 +164,11 @@ body {
 }
 
 .card__full {
-  margin: 0px;
+  gap: 0;
+  width: 650px;
+  margin: 0;
   display: flex;
-  width: 600px;
+  flex-direction: column;
 }
 .card__full .card__info {
   margin-left: 20px;
@@ -133,21 +179,15 @@ body {
 .card__full .card__info .card__year {
   margin-bottom: 20px;
 }
-.card__full .card__info .card__description {
-  width: 550px;
-}
 .card__full .card__info .card__description span {
   color: #e4e4e4;
 }
 
 .card__desc {
-  margin: 20px 0px 10px 0px;
+  margin-bottom: 10px;
 }
-
-.trailer {
-  text-align: center;
-  width: 700px;
-  margin: 40px auto;
+.card__desc .card__title {
+  margin: 0;
 }
 
 span label {
