--- a/style.css
+++ b/style.css
@@ -13,6 +13,32 @@ body {
   visibility: hidden;
 }
 
+.header__filter-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.header__filter-wrapper .wrapper__search input {
+  background-color: #DF6951;
+  border: 1px solid #DF6951;
+  border-radius: 10px;
+  padding: 5px;
+  color: #e4e4e4;
+}
+.header__filter-wrapper .wrapper__search input:focus {
+  outline: 0;
+  outline-offset: 0;
+}
+
+input::-webkit-input-placeholder {
+  color: #e4e4e4;
+  opacity: 0.7;
+}
+
+input::-moz-placeholder {
+  color: #e4e4e4;
+  opacity: 0.7;
+}
+
 .wrapper__img img, .next, .previous {
   margin-top: 30px;
 }
