--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,25 @@ body{
 	cursor: pointer;
 	visibility: hidden;
 }
+.header__filter-wrapper{
+	display: flex;
+	justify-content: space-between;
+	.wrapper__search{
+		input{
+			&:focus{
+				outline: 0;
+				outline-offset: 0;
+			}
+			background-color: $button-color;
+			border: 1px solid $button-color;
+			border-radius: 10px;
+			padding: 5px;
+			color: $text-color;
+		}
+	}
+}
+input::-webkit-input-placeholder { color: $text-color; 	opacity: 0.7;}
+input::-moz-placeholder { color: $text-color; 	opacity: 0.7;}
 .wrapper__img img,.next,.previous{
 	margin-top: 30px;
 }
