--- a/style.scss
+++ b/style.scss
@@ -69,6 +69,9 @@ input::-moz-placeholder { color: $text-color; 	opacity: 0.7;}
 	padding: 10px;
 	text-transform: none;
 	margin-bottom: 10px;
+	&:hover{
+		background-color: #b95642;
+	}
 }
 .rating__btns{
 	justify-content: space-between;
@@ -95,6 +98,9 @@ input::-moz-placeholder { color: $text-color; 	opacity: 0.7;}
 		display: flex;
 		width: 150px;
 		justify-content: space-between;
+		input{
+			border-radius: 10px;
+		}
 	}
 }
 .title{
@@ -204,7 +210,7 @@ span label{
 	max-height: 200px;
 	width: 150px;
 	overflow-y: scroll;
-}
-.checkselect::-webkit-scrollbar{
-	display: none;
+	&::-webkit-scrollbar{
+		display: none;
+	}
 }
