--- a/style.css
+++ b/style.css
@@ -17,16 +17,32 @@ body {
   display: flex;
   justify-content: space-between;
 }
-.header__filter-wrapper .wrapper__search input {
+.header__filter-wrapper input {
   background-color: #DF6951;
   border: 1px solid #DF6951;
   border-radius: 10px;
   padding: 5px;
   color: #e4e4e4;
 }
-.header__filter-wrapper .wrapper__search input:focus {
+.header__filter-wrapper input:focus {
   outline: 0;
   outline-offset: 0;
+}
+
+.after {
+  position: relative;
+}
+.after:after {
+  content: "";
+  z-index: 33131;
+  left: 180px;
+  top: 5px;
+  width: 20px;
+  height: 20px;
+  background-image: url("img/optimist.png");
+  background-size: 20px 20px;
+  position: absolute;
+  color: white;
 }
 
 input::-webkit-input-placeholder {
