--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @import url("normalize.css");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 body {
-  background: url("img/background_main.dark.jpg") no-repeat fixed;
+  background: url("img/background_main.dark.jpg") no-repeat fixed center;
+  background-size: cover;
+  box-sizing: border-box;
 }
 
 .title {
@@ -118,7 +120,7 @@ input::-moz-placeholder {
 
 .header__filter {
   display: flex;
-  margin-bottom: 30px;
+  margin: 30px 0px;
 }
 
 .header__genre, .header__year, .header__cense {
@@ -148,7 +150,7 @@ input::-moz-placeholder {
   border: 1px solid #1A1419;
   border-radius: 30px;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 .main__style:after {
   content: "";
@@ -169,17 +171,11 @@ input::-moz-placeholder {
   z-index: 1;
 }
 
-.card {
-  z-index: 2;
-}
-
 .filter__button:hover {
   scale: 0.9;
 }
 
 .card__content .img {
-  width: 200px;
-  height: 290px;
   transition: all 0.2s ease-in-out;
   display: block;
   border-radius: 5px;
@@ -250,6 +246,87 @@ span label {
 }
 .checkselect::-webkit-scrollbar {
   display: none;
+}
+
+#form__add {
+  display: none;
+  animation-duration: 1.5s;
+  animation-fill-mode: both;
+  animation-name: fadeIn;
+}
+#form__add .wrapper__img {
+  margin-bottom: 30px;
+}
+#form__add .wrapper__img img {
+  margin: 0;
+}
+#form__add form input {
+  background-color: #fff;
+  border-color: #e4e4e4;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
+  border-width: 1px;
+  border-style: solid;
+  color: #332f2d;
+  padding: 10px;
+  width: 96%;
+}
+#form__add form input:focus {
+  outline: none;
+}
+
+#form__add.open {
+  display: block;
+}
+
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  transition: all 0.5s ease;
+  display: none;
+  z-index: 100;
+}
+
+.popup_open {
+  display: block;
+}
+
+.popup__container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #DF6951;
+  border-radius: 10px;
+  max-width: 700px;
+  width: 100%;
+}
+
+.popup__wrapper {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form__p {
+  margin: 0 0 5px 0;
+  display: block;
+  color: red;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
