--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("normalize.css");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 body {
@@ -29,7 +28,7 @@ body {
   padding: 5px;
   color: #e4e4e4;
 }
-ё .header__filter-wrapper input:focus {
+.header__filter-wrapper input:focus {
   outline: 0;
   outline-offset: 0;
 }
@@ -40,10 +39,10 @@ body {
 .after:after {
   content: "";
   z-index: 33131;
-  left: 180px;
+  left: 170px;
   top: 5px;
-  max-width: 20px;
-  max-height: 20px;
+  width: 20px;
+  height: 20px;
   background-image: url("img/optimist.png");
   background-size: 20px 20px;
   position: absolute;
