--- a/style.scss
+++ b/style.scss
@@ -205,6 +205,12 @@ input::-moz-placeholder { color: $text-color; 	opacity: 0.7;}
 		}
 	}
 }
+.title{
+	a{
+		color: white;
+		text-decoration: none;
+	}
+}
 .card__desc{
 	max-width: 250px;
 	margin-bottom: 10px;
