--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 .after:after {
   content: "";
   z-index: 33131;
-  left: 170px;
+  right: 10px;
   top: 5px;
   width: 20px;
   height: 20px;
