--- a/page.css
+++ b/page.css
@@ -31,3 +31,9 @@
         height: 300px;
     }
 }
+@media screen and (max-width: 470px){
+    .trailer iframe{
+        width: 300px;
+        height: 200px;
+    }
+}
